Добавил Возможность сохранять данные из заказа в БД

--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -78,7 +78,7 @@
             <li class="d-flex justify-content-between py-3 ">
             <a href="/" class="btn btn-success rounded py-2 btn-block">Продолжить покупки</a>
             </li>
-            </ul><a href="#" class="btn btn-dark rounded py-2 btn-block">Перейти к оплате</a>
+            </ul><a href="{% url 'orders:order_create' %}" class="btn btn-dark rounded py-2 btn-block">Перейти к оплате</a>
           </div>
         </div>
       </div>
